# nionswift-ipython-kernel

./: CHANGES.rst  README.rst  mypy.ini  pyproject.toml  setup.cfg
nion/ipython_kernel/: heartbeat.py  ipython_kernel.py  magic.py  mpl_backend_inline.py  mpl_backend_swift.py  paths.py  zmqstream.py
nionswift_plugin/ipython_kernel_extension/: kernel_extension.py
