[metadata]
name = nionswift-ipython-kernel
version = 0.0.1
author = Nion Software
author_email = swift@nion.com
description = An ipython kernel for Nion Swift.
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find_namespace:
python_requires = >=3.11
install_requires =
    pyzmq
    nionutils
    nionswift

[options.package_data]
nionswift_plugin.ipython_kernel_extension =
    resources/nion_swift_kernel/*.*
